--- a/SFML/SFML.vcxproj
+++ b/SFML/SFML.vcxproj
@@ -160,6 +160,7 @@
     </ClCompile>
     <ClCompile Include="State.cpp" />
     <ClCompile Include="Tile.cpp" />
+    <ClCompile Include="U7TilesState.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h" />
@@ -170,6 +171,7 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="State.h" />
     <ClInclude Include="Tile.h" />
+    <ClInclude Include="U7TilesState.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
