--- a/SFML/SFML.vcxproj.filters
+++ b/SFML/SFML.vcxproj.filters
@@ -24,9 +24,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
-      <Filter>Quelldateien</Filter>
-    </ClCompile>
     <ClCompile Include="pch.cpp">
       <Filter>Headerdateien</Filter>
     </ClCompile>
@@ -50,6 +47,12 @@
     </ClCompile>
     <ClCompile Include="MainMenuState.cpp">
       <Filter>States</Filter>
+    </ClCompile>
+    <ClCompile Include="U7TilesState.cpp">
+      <Filter>States</Filter>
+    </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -75,6 +78,9 @@
       <Filter>States</Filter>
     </ClInclude>
     <ClInclude Include="MainMenuState.h">
+      <Filter>States</Filter>
+    </ClInclude>
+    <ClInclude Include="U7TilesState.h">
       <Filter>States</Filter>
     </ClInclude>
   </ItemGroup>
