--- a/SFML/SFML.vcxproj
+++ b/SFML/SFML.vcxproj
@@ -151,6 +151,7 @@
     <ClCompile Include="Button.cpp" />
     <ClCompile Include="FileSystem.cpp" />
     <ClCompile Include="GraphicSettings.cpp" />
+    <ClCompile Include="GridMapper.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainMenuState.cpp" />
     <ClCompile Include="pch.cpp">
@@ -167,6 +168,7 @@
     <ClInclude Include="Button.h" />
     <ClInclude Include="FileSystem.h" />
     <ClInclude Include="GraphicSettings.h" />
+    <ClInclude Include="GridMapper.h" />
     <ClInclude Include="MainMenuState.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="State.h" />
